style.css
body, html {
    margin: 0;
    font-family: 'Roboto', sans-serif;
}
h1, h2, h3, h4, h5 {
    font-weight: 400;
}
h4 {
    margin: 0;
}
.page {
    text-align: center;
}
.page__header {
    text-align: center;
    padding: 30px;
}
.header {
    font-family: 'Poiret One', cursive;
    color: #fff;
    background: #000;
}
.header__headline {
    font-size: 90px;
    font-size: 11vw;
    margin: 20px 0;
}
.header__sub {
    font-size: 27px;
    font-size: 3vw;
}
.address {
    text-align: center;
    vertical-align: top;
    display: inline-block;
}
.list {
    list-style: none;
    padding-inline-start: 40px;
}
.list__item {
    margin: 10px 0px;
}
.address__list {
    font-size: 16px;
}
.address__ancor {
    font-size: 20px;
    text-decoration: none;
    max-width: 500px;
    word-break: break-all;
    color: #007db5;
}
.address__ancor:hover {
    text-decoration: underline;
}
.address__title {
    opacity: .7;
}
.address__ancor,
.address__title {
    vertical-align: middle;
    display: inline-block;
}
.address__item {
    font-size: 25px;
    font-style: normal;
    text-align: left;
    vertical-align: top;
    padding: 10px;
    margin: 10px;
}
.donation-form {
    text-align: center;
}
.avatar, .address {
    vertical-align: middle;
}
.avatar {
    background-image: url(img/avatar.jpg);
    background-size: 300px 334px;
    display: inline-block;
    height: 300px;
    background-position: 50% 50%;
    width: 300px;
    border: 0;
    border-radius: 100%;
    margin: 50px 10px;
}

@media only screen and (max-width: 600px) {
    .page__sub {
        font-size: 5vw;
    }
    .avatar {
        margin: 10px;
    }
    .address__item {
    }
}

@media 
(-webkit-min-device-pixel-ratio: 2), 
(min-resolution: 192dpi) {
    .avatar {
         background-image: url(img/avatar@2x.jpg);
     }
}

